--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
   "name": "get-value-from-object",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "scripts": {
-    "start": "nodemon example/index.js --watch  ./ --exec babel-node",
-    "build": "babel src -d dist"
+    "start": "nodemon example/index.ts --watch  ./ --exec ts-node",
+    "build": "tsc"
   },
   "main": "dist/index.js",
+  "type": "dist/index.d.ts",
   "repository": "git@github.com:sigka1234/get-value-from-value.git",
   "author": "jaewoo <sigka1234@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sigka1234/get-value-from-value"
+  },
+  "homepage": "https://github.com/sigka1234/get-value-from-value",
   "dependencies": {
     "@babel/cli": "^7.12.7",
     "@babel/core": "^7.12.7",
     "@babel/node": "^7.12.6",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
-    "babel-loader": "^8.2.1"
+    "babel-loader": "^8.2.1",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
-    "babel-plugin-add-module-exports": "^1.0.4"
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "typescript": "^4.1.2"
   },
   "keywords": [
     "node",
@@ -29,6 +36,8 @@
     "get-value",
     "get-object-value",
     "get-value-object",
-    "object parsing"
+    "object parsing",
+    "parsing",
+    "parse"
   ]
 }
