--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-value-from-object",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "scripts": {
     "start": "nodemon example/index.ts --watch  ./ --exec ts-node",
     "build": "tsc"
@@ -21,6 +21,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "babel-loader": "^8.2.1",
+    "get-value-from-object": "^1.0.2",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
